Adding and commiting pending changes to repo